2010-01-28 John Wu <John.Wu at ACM.org>
	* src/mensa.cpp:3476 add '++jp' to increment the loop index, an
	error reported by Joel Dolisy <Joel dot Dolisy at solarwinds dot
	com>
	* src/parti.cpp: add code to empty the memory cache in the
	functions that perform reordering, otherwise, some files to be
	modified by the reordering could be hold in memory in read-only
	mode.  Joel Dolisy reported that such situation can cause file
	sharing violation on MS Windows

2010-01-27 John Wu <John.Wu at ACM.org>
	* src/bundle.cpp: remove extra call to reverse the row order
	(address a problem reported by Valeria Lorenzetti)
	* src/qExpr.h: make sure the name is a valid name before recording
	it is a barrel object in function ibis::variable::recordVariable
	* src/part.cpp:12114 make sure column has a valid name before
	print a warning message about not able to locate a column

2010-01-25 John Wu <John.Wu at ACM.org>
	* src/array_t.cpp: change the sort function that takes an index
	array to sort the elements identified by the input array when the
	input array is a valid subset of indices
	* src/colValues.cpp: change sort function that takes an index
	array to make use new sort function of array_t
	* src/bundles.cpp: change the constructor of bundles that takes a
	list of values to skip over '*'
	* src/bord.cpp: columnType(i) --> columnType(jbdl)
	* tests/Makefile.am: modify test case 5 of check-text to exercise
	the order-by functionality more
	* src/mensa.cpp:390 match 'count(*)' exactly, not just 'count('
	* src/bundle.cpp: update bundles::sort to deal with the case there
	ncol is not the same as comps.size()

2010-01-23 John Wu <John.Wu at ACM.org>
	* src/part.cpp: handle code to fill RIDs in the constructor that
	takes two directory names
	* src/bundle.cpp: a number of loops with g as loop variable, but
	actually used i instead, they cause the function reorder to
	mebehavior (a problem reported by Valeria Lorenzetti)

2010-01-22 John Wu <John.Wu at ACM.org>