@@ -31,7 +31,7 @@ PROJECT_NAME           = FastBit
 # This could be handy for archiving the generated documentation or 
 # if some version control system is used.
 
-PROJECT_NUMBER         = ibis1.1.5
+PROJECT_NUMBER         = ibis1.1.6
 
 # The OUTPUT_DIRECTORY tag is used to specify the (relative or absolute) 
 # base path where the generated documentation will be put. 
