@@ -1,0 +1,3 @@
+0, 94.5, 10, 70
+1, 84.5, 10, 70
+2, 77, 5, 35
